<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.Links.AddLinksFragment" >

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_nombre"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:text="@string/msg_nombre" />

    <EditText
        android:id="@+id/et_URL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_URL"
        android:minHeight="48dp"
        tools:text="@string/msg_URL" />

    <Button
        android:id="@+id/bt_agregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_agregar" />
</LinearLayout>